--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "prefer-stable": true,
     "require": {
-        "php": ">=5.5.0",
-        "unionofrad/lithium": "^1.1"
+        "php": ">=7.1",
+        "unionofrad/lithium": "2.0.x-dev"
     }
 }
